--- a/angularapp/src/app/adminviewfeedback/adminviewfeedback.component.html
+++ b/angularapp/src/app/adminviewfeedback/adminviewfeedback.component.html
@@ -1,1 +1,24 @@
-<p>adminviewfeedback works!</p>
+<h2>Feedback Details</h2>
+
+<form #feedbackForm="ngForm" (ngSubmit)="addFeedback(feedbackForm)">
+    <table border="1">
+        <thead>
+            <tr>
+                <th>S.No</th>
+                <th>User Name</th>
+                <th>Feedback</th>
+                <th>Ratings</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let feedback of feedbacks;index as i">
+                <td>{{ i + 1 }}</td>
+                <td>{{ feedback.name }}</td>
+                <td>{{ feedback.feedback }}</td>
+                <td>{{ feedback.rating }}</td>
+                <td><button type="button" (click)="viewProfile(feedback)">Show Profile</button></td>
+            </tr>
+        </tbody>
+    </table>
+</form>
