--- a/angularapp/src/app/adminviewfeedback/adminviewfeedback.component.html
+++ b/angularapp/src/app/adminviewfeedback/adminviewfeedback.component.html
@@ -1,4 +1,4 @@
-<h2>Feedback Details</h2>
+<!-- <h2>Feedback Details</h2>
 
 <form #feedbackForm="ngForm" (ngSubmit)="addFeedback(feedbackForm)">
     <table border="1">
@@ -21,4 +21,4 @@
             </tr>
         </tbody>
     </table>
-</form>
+</form> -->
