--- a/angularapp/src/app/login/login.component.html
+++ b/angularapp/src/app/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<form #loginForm="ngForm" (ngSubmit)="login()" class="login-form">
+    <div>
+      <label for="username">Username:</label>
+      <input id="username" name="username" ngModel required placeholder="Enter your username">
+      <div *ngIf="!loginForm.form.controls.username?.valid && loginForm.form.controls.username?.touched">
+        Username is required.
+      </div>
+    </div>
+  
+    <div>
+      <label for="password">Password:</label>
+      <input id="password" name="password" type="password" ngModel required placeholder="Enter your password">
+      <div *ngIf="!loginForm.form.controls.password?.valid && loginForm.form.controls.password?.touched">
+        Password is required.
+      </div>
+    </div>
+  
+    <button type="submit" [disabled]="loginForm.invalid">Login</button>
+  </form>
