admin add and view services with model and service and authguard

--- a/angularapp/src/app/adminaddservice/adminaddservice.component.html
+++ b/angularapp/src/app/adminaddservice/adminaddservice.component.html
@@ -1,1 +1,42 @@
-<p>adminaddservice works!</p>
+<div class="container">
+  <h2>{{ id ? 'Edit Service' : 'Add Service' }}</h2>
+  <form #serviceForm="ngForm" (ngSubmit)="addService(serviceForm)">
+    <div>
+      <label for="serviceName">Service Name:</label>
+      <input type="text" id="serviceName" name="serviceName" [(ngModel)]="vehiclemaintenance.serviceName" ngModel
+        required #serviceName="ngModel" />
+      <div *ngIf="serviceName.invalid && serviceName.touched">
+        Service Name is required.
+      </div>
+    </div>
+
+    <div>
+      <label for="servicePrice">Service Price:</label>
+      <input type="number" id="servicePrice" name="servicePrice" [(ngModel)]="vehiclemaintenance.servicePrice" ngModel
+        required min="0" #servicePrice="ngModel" />
+      <div *ngIf="servicePrice.invalid && servicePrice.touched">
+        Service Price is required and must be a positive number.
+      </div>
+    </div>
+    <div>
+      <label for="vehicleType">Type of Vehicle:</label>
+      <select id="vehicleType" name="vehicleType" [(ngModel)]="vehiclemaintenance.typeOfVehicle" ngModel required
+        #vehicleType="ngModel">
+        <option value="" disabled selected>Select Vehicle Type</option>
+        <option value="bike">Bike</option>
+        <option value="car">Car</option>
+        <option value="truck">Truck</option>
+      </select>
+      <div *ngIf="vehicleType.invalid && vehicleType.touched">
+        Please select a vehicle type.
+      </div>
+    </div>
+
+    <button type="submit" [disabled]="serviceForm.invalid">{{ id ? 'Update Service' : 'Add Service' }}</button>
+  </form>
+</div>
+
+<div *ngIf="showPopup" class="popup">
+  <p>{{ id ? 'Service Updated Successfully' : 'Service Added Successfully' }}</p>
+  <button (click)="closePopup()">Ok</button>
+</div>
