--- a/angularapp/src/app/adminviewservice/adminviewservice.component.html
+++ b/angularapp/src/app/adminviewservice/adminviewservice.component.html
@@ -1,1 +1,36 @@
-<p>adminviewservice works!</p>
+<div class="container">
+  <div class="search-container">
+    <label for="searchInput">Search Service Name:</label><br>
+    <input type="text" id="searchInput" [(ngModel)]="searchData" placeholder="Enter service name"
+      class="form-control" />
+    <button (click)="searchByServiceName()" class="btn btn-primary">Search</button>
+  </div>
+
+  <table class="table table-bordered mt-3">
+    <thead>
+      <tr>
+        <th>Service ID</th>
+        <th>Service Name</th>
+        <th>Service Price</th>
+        <th>Type of Vehicle</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let service of vehiclemaintainance;index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ service.serviceName }}</td>
+        <td>{{ service.servicePrice }}</td>
+        <td>{{ service.typeOfVehicle }}</td>
+        <td>
+          <button class="btn btn-success" (click)="editService(service.id)">
+            Edit
+          </button>
+          <button class="btn btn-danger" (click)="deleteService(service.id)">
+            Delete
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
