Changes in navbar and useraddappointment

--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-home></app-home>
-
+<app-usernavbar></app-usernavbar>
+<app-adminnavbar></app-adminnavbar>
+<!-- <app-navbar></app-navbar> -->
 <router-outlet></router-outlet>
