--- a/angularapp/src/app/useraddfeedback/useraddfeedback.component.html
+++ b/angularapp/src/app/useraddfeedback/useraddfeedback.component.html
@@ -1,1 +1,13 @@
-<p>useraddfeedback works!</p>
+<div class="card">
+    <h2>Feedback</h2>
+  
+    <label for="message">Feedback Message:</label>
+    <textarea id="message" name="message" rows="4" [(ngModel)]="feedback.message"></textarea><br>
+  
+    <label for="rating">Rating (1-5):</label>
+    <input type="number" id="rating" name="rating" min="1" max="5" [(ngModel)]="feedback.rating"><br>
+    
+    <button type="button" (click)="submitFeedback()">Submit Feedback</button>
+  </div>
+
+  
