--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-home></app-home>
+<!-- <app-adminviewappointment></app-adminviewappointment> -->
+<app-userviewappointment></app-userviewappointment>
 <router-outlet></router-outlet>
