--- a/angularapp/src/app/adminviewservice/adminviewservice.component.html
+++ b/angularapp/src/app/adminviewservice/adminviewservice.component.html
@@ -23,10 +23,10 @@
         <td>{{ service.servicePrice }}</td>
         <td>{{ service.typeOfVehicle }}</td>
         <td>
-          <button class="btn btn-success" (click)="editService(service.id)">
+          <button class="btn btn-success" (click)="editService(service.serviceId)">
             Edit
           </button>
-          <button class="btn btn-danger" (click)="deleteService(service.id)">
+          <button class="btn btn-danger" (click)="deleteService(service.serviceId)">
             Delete
           </button>
         </td>
