11-04-2025 Added navbar and useraddappointment

--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -1,19 +1,6 @@
+<!-- <app-navbar></app-navbar> -->
+<!-- <app-usernavbar></app-usernavbar> -->
+<app-adminnavbar></app-adminnavbar>
+<router-outlet></router-outlet>
 
-<nav class="navbar">
-
-  <div class="navbar-title">
-    <a [routerLink]="['/home']" >Vehicle Service</a>
-  </div>
-  
-
-  <div class="navbar-links">
-    <a [routerLink]="['/home']" >Home</a>
-    <a [routerLink]="['/registration']">Register</a>
-    <a [routerLink]="['/login']">Login</a>
-  </div>
-</nav>
-
-<div>
-  <router-outlet></router-outlet>
-</div>
 
