--- a/angularapp/src/app/useraddappointment/useraddappointment.component.html
+++ b/angularapp/src/app/useraddappointment/useraddappointment.component.html
@@ -12,14 +12,14 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let service of services">
-      <td>{{ service.id }}</td>
-      <td>{{ service.name }}</td>
-      <td>{{ service.price }}</td>
-      <td>{{ service.vehicle }}</td>
-      <td><input type="date" class="appointment-date" (input)="onInputChange($event, $event.target.closest('tr'))"></td>
-      <td><input type="text" class="location" placeholder="Enter location" (input)="onInputChange($event, $event.target.closest('tr'))"></td>
-      <td><button class="add-appointment" disabled>Add Appointment</button></td>
+    <tr *ngFor="let service of services; let i = index">
+      <td>{{i+1}}</td>
+      <td>{{ service.serviceName }}</td>
+      <td>{{ service.servicePrice }}</td>
+      <td>{{ service.typeOfVehicle }}</td>
+      <td><input type="date" [(ngModel)]="appointmentDates[i]" (input)="onInputChange(i)"></td>
+      <td><input type="text" [(ngModel)]="locations[i]" placeholder="Enter location" (input)="onInputChange(i)"></td>
+      <td><button class="add-appointment" (click)="addAppointment(i)" [disabled]="!appointmentDates[i] || !locations[i]">Add Appointment</button></td>
     </tr>
   </tbody>
 </table>
