--- a/angularapp/src/app/adminnavbar/adminnavbar.component.html
+++ b/angularapp/src/app/adminnavbar/adminnavbar.component.html
@@ -1,16 +1,24 @@
-<nav class="navbar">
-  <a routerLink="/home" class="text-decoration-none">Home</a>
-  <div class="dropdown">
-
-    <select class="dropdown" onchange="location = this.value;">
-      <option disabled selected>Services</option>
-      <option value="/adminaddservice">Add Service</option>
-      <option value="/adminviewservice">View Services</option>
-    </select>
-
-  </div>
-  <a routerLink="/adminviewappointment" class="text-decoration-none">Appointments</a>
-  <a routerLink="/adminviewfeedback" class="text-decoration-none">Feedbacks</a>
-  <a routerLink="/adminviewuserdetails" class="text-decoration-none">Customer</a>
-  <a routerLink="/home" type="button">Logout</a>
+<nav>
+    <div class="navbar">
+        <h1>Vehicle Service</h1>
+        <div class="admin-section">
+            <nav>
+                <ul>
+                    <li>Welcome {{userName}}/{{userRole}}</li>
+                    <li><a href="#">Home</a></li>
+                    <li class="hover-card">
+                        <a href="#">Services</a>
+                        <div class="card">
+                            <button onclick="location.href='/adminaddservice'">Add Service</button>
+                            <button onclick="location.href='/adminviewservice'">View Services</button>
+                        </div>
+                    </li>
+                    <li><a Link="/adminviewappointment">Appointments</a></li>
+                    <li><a Link="/adminviewfeedback">Feedbacks</a></li>
+                    <li><a Link="/adminviewuserdetails">Customer</a></li>
+                    <li><a class="logout" (click)="logout()" type="button">Logout</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </nav>
